--- a/Library_System/src/main/java/com/alejandro/library_system/FrmEditorial.form
+++ b/Library_System/src/main/java/com/alejandro/library_system/FrmEditorial.form
@@ -263,6 +263,7 @@
           </Properties>
           <Events>
             <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="TblEditorialMouseClicked"/>
+            <EventHandler event="keyReleased" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="TblEditorialKeyReleased"/>
           </Events>
         </Component>
       </SubComponents>
